--- a/new.css
+++ b/new.css
@@ -5,7 +5,7 @@
 
 body {
   font-family: "Varela Round", "Quicksand", sans-serif;
-  background: url(background.jpg);
+  background: url(back.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-color: black;
